--- a/proyecto1/blogpost.html
+++ b/proyecto1/blogpost.html
@@ -13,6 +13,8 @@
             <p>Este es el primer parrafo super interesante del articulo que habla sobre cómo los ovnis conquistaran el oceano. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur libero cupiditate dolorem porro quas quos corrupti distinctio similique, a nulla perspiciatis illum quaerat alias reprehenderit sit doloremque optio nihil nemo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere expedita non suscipit eum sed, quod enim deleniti porro dignissimos dolorum ipsum ullam commodi accusantium eaque necessitatibus aliquam a quibusdam quo.
             Ipsum consequuntur magnam ratione ut tempore porro doloremque, pariatur dolore sunt, rerum labore qui non modi suscipit vel est! Vitae, nemo! Officia obcaecati animi maxime saepe nam dolorem fugiat ex?
             Totam repellendus nobis quisquam quos obcaecati, veniam architecto, laboriosam eius et quo eos iure sit dignissimos temporibus id iste fuga vero saepe? Recusandae ea impedit ipsa enim totam quo necessitatibus?</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid doloribus magnam praesentium eaque delectus asperiores reiciendis molestiae, odit enim iusto deleniti dolorem nam ea, eius dicta voluptates recusandae earum impedit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam ratione, incidunt odit, repellendus perferendis earum omnis totam debitis nostrum ipsa molestiae? Officiis explicabo perspiciatis assumenda repudiandae dicta eveniet.
+            <a href="#">nisi excepturi</a></p>
         </div>
     </div>
     
