--- a/proyecto1/blogpost.html
+++ b/proyecto1/blogpost.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./estilos/estilos.css">
-    <title>Bienvenido a mi primer proyecto enlazado a github 2.1</title>
+    <title>mi primer proyecto enlazado a github 2.1</title>
 </head>
 <body>
     <div class="container">
